# douyu-barrage-crawler

./: .dockerignore  .gitignore  Dockerfile  README.md  crawler.py  docker-compose.yml  pyproject.toml  worker.py
barrage_crawler/: crawler.py  driver.py  manager.py  sttutil.py  wsclient.py
config/: settings.py
